# IoTSharp

./: Directory.Packages.props  IoTSharp.slnx
IoTSharp.Data.JsonDB/: Data.JsonDB.slnx  Directory.Build.props  Directory.Packages.props  LICENSE  NuGet.Config  README.md
IoTSharp.Data.JsonDB/src/IoTSharp.Data.JsonDB/: IoTSharp.Data.JsonDB.csproj  JsonDbCommand.cs  JsonDbConnection.cs  JsonDbParameter.cs  JsonDbParameterCollection.cs  README.md
IoTSharp.Data.JsonDB/tests/IoTSharp.Data.JsonDB.Tests/: IoTSharp.Data.JsonDB.Tests.csproj  JsonDbTests.cs
IoTSharp.Data.Storage/IoTSharp.Data.MySQL/: IoTSharp.Data.MySQL.csproj
IoTSharp.Numerics/: LICENSE  README.md
IoTSharp.Numerics/src/IoTSharp.Numerics/: BigEndianUInt16.cs  BigEndianUInt24.cs  BigEndianUInt32.cs  BigEndianUInt64.cs  InlineArrayExtensions.cs  InlineArrayNT.cs  IoTSharp.Numerics.csproj
IoTSharp.Numerics/src/IoTSharp.Numerics.TestProject/: BEAreEqualLETest.cs  BEDecEqualTest.cs  BEEqualBytesTest.cs  BEEqualOtherTest.cs  BEHashCodeTest.cs  BEHexAreEqualTest.cs  BytesEqualBeTest.cs  IoTSharp.Numerics.TestProject.csproj
SonnetDB/: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  Directory.Build.props  Directory.Packages.props  LICENSE  README.en.md  README.md  ROADMAP.md  SonnetDB.slnx  THIRD_PARTY_NOTICES.md  demo.sql  docker-compose.override.yml  docker-compose.yml  llms.txt
SonnetDB/.config/: dotnet-tools.json
SonnetDB/connectors/: README.md
SonnetDB/connectors/c/: CMakeLists.txt  CMakePresets.json  README.md
SonnetDB/connectors/c/examples/: quickstart.c
SonnetDB/connectors/c/include/: sonnetdb.h
SonnetDB/connectors/c/native/SonnetDB.Native/: SonnetDB.Native.csproj  SonnetDB.Native.csproj.lscache  SonnetDbNativeExports.cs
SonnetDB/connectors/go/: README.md  driver.go  go.mod  sonnetdb.go
SonnetDB/connectors/java/: CMakeLists.txt  CMakePresets.json  README.md
SonnetDB/connectors/java/examples/: Quickstart.java
SonnetDB/connectors/java/native/: sonnetdb_jni.c
SonnetDB/connectors/java/src/ffm/java/com/sonnetdb/ffm/: SonnetDbFfmBackend.java
SonnetDB/connectors/java/src/main/java/com/sonnetdb/: SonnetDbBulkOptions.java  SonnetDbConnection.java  SonnetDbDocumentCollection.java  SonnetDbException.java  SonnetDbKeyValueStore.java  SonnetDbKvCasResult.java  SonnetDbKvEntry.java  SonnetDbKvTtl.java  SonnetDbResult.java  SonnetDbValueType.java
SonnetDB/connectors/java/src/main/java/com/sonnetdb/ffm/: SonnetDbFfmBackend.java
SonnetDB/connectors/java/src/main/java/com/sonnetdb/internal/: NativeBackend.java  NativeBackendLoader.java
SonnetDB/connectors/java/src/main/java/com/sonnetdb/jni/: SonnetDbJni.java  SonnetDbJniBackend.java
SonnetDB/connectors/odbc/: README.md
SonnetDB/connectors/purebasic/: README.md
SonnetDB/connectors/python/: README.md
SonnetDB/connectors/rust/: Cargo.toml  README.md  build.rs
SonnetDB/connectors/vb6/: CMakeLists.txt  CMakePresets.json  README.md
SonnetDB/connectors/vb6/examples/: Quickstart.bas
SonnetDB/connectors/vb6/native/: sonnetdb_vb6_bridge.c
SonnetDB/connectors/vb6/src/: SonnetDbConnection.cls  SonnetDbNative.bas  SonnetDbResult.cls
SonnetDB/copilot/skills/: anomaly-detect.md  auth-admin.md  bulk-ingest.md  changepoint-detect.md  copilot-knowledge-admin.md  database-overview.md  forecast-howto.md  gap-fill.md  influxdb-migration.md  iot-schema-design.md  lag-delta.md  naming-convention.md  observability.md  pid-control-tuning.md  pid-control.md  query-aggregation.md  retention-compaction.md  schema-design.md  sql-commenting.md  sql-dialect-guide.md  troubleshoot-slow-query.md  vector-search.md  wal-recovery.md  write-safety-review.md
SonnetDB/docs/: _config.yml  ado-net.md  architecture.md  backup-restore.md  bulk-ingest.md  cli-reference.md  data-model.md  efcore.md  embedded-api.md  extending-functions.md  file-format.md  forecast.md  frame-protocol.md  fulltext-dictionaries.md  geo-spatial.md  getting-started.md  index.md  industrial-ai-applications.md  iotsharp-compat-matrix.md  kv-keyspace.md  parity-roadmap.md  performance-reliability-updates.md  pid-control.md  roadmap-history.md  search-vector-engine-consolidation-roadmap.md  sonnetmq-roadmap.md  sql-cookbook.md  sql-reference.md  vector-search.md  web-workbench.md
SonnetDB/docs/_layouts/: default.html
SonnetDB/docs/assets/: docs.css
SonnetDB/docs/blogs/: 00-publishing-plan.md  001-sonnetdb-introduction.md  002-why-choose-sonnetdb.md  003-docker-quickstart.md  004-build-from-source.md  005-architecture-deep-dive.md  006-vs-influxdb-tdengine-sqlite.md  007-cli-installation.md  008-first-setup-wizard.md  009-data-model.md  010-file-format.md  011-security-users-roles.md  012-token-authentication.md  013-create-measurement.md  014-hnsw-index.md  015-insert-into.md  016-geopoint-insert.md  017-vector-literal.md  018-select-where-basics.md  019-arithmetic-expressions.md  020-scalar-functions.md  021-nested-functions.md  022-pagination.md  023-multi-condition-where.md  024-show-describe-metadata.md  025-delete-tombstone.md  026-comment-syntax.md  027-quoted-identifiers.md  028-vector-distance-functions.md  029-pgvector-operators.md  030-sql-cookbook.md  031-basic-aggregation.md  032-statistical-aggregates.md  033-tdigest-percentile.md  034-distinct-count-hyperloglog.md  035-histogram.md  036-centroid-vector-aggregate.md  037-group-by-time.md  038-group-by-time-advanced.md  039-difference-delta-window.md  (+94 more)
SonnetDB/docs/help/: sonnetdb-comprehensive-guide.md
SonnetDB/docs/openapi/: document-api.yaml
SonnetDB/docs/press-releases/: PR1-SonnetDB-Foundation-Release.md  PR2-SonnetDB-Intelligence-Release.md  PR3-SonnetDB-AI-Ecosystem-Release.md
SonnetDB/docs/releases/: 2.5.0.md  README.md  docker-image.md  installers.md  sdk-bundle.md  server-bundle.md
SonnetDB/eng/: build-windows.ps1  release.ps1
SonnetDB/extensions/SonnetDB.Caching/: PackageReadme.md  SonnetDB.Caching.csproj  SonnetDbCacheCodec.cs  SonnetDbCacheJanitor.cs  SonnetDbCacheOptions.cs  SonnetDbCacheStore.cs  (+4 more)
SonnetDB/web/: .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
(+1049 files in other folders)
